--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
 html {
     box-sizing: border-box;
     font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
 }
   
 *, *:before, *:after {
